# Surnia

./: .env.example  .gitignore  agent_input_gake.json  data_interpretation_context.md  fetch_wallet_data.py  fetch_wallet_data_complete.py  initial_gpt_4_RESULTs.md  pyproject.toml  react_agent_execution_plan.md  react_agent_plan_merged.md  run_smart_analysis.py  sample_agent_input.json  smart_wallet_analysis_prompt.txt  wallet_analysis_prompt_o3.md  wallet_analysis_prompt_v2_gemini.md  wallet_analysis_prompt_v2_gpt_4.5.md  wallet_analysis_prompt_v2_sonnet_4.md
docs/: next_tasks.md
notebook/: WalletAgentAnalysis.ipynb  updated_analysis_cell.py
